# json_schema

./: .gitignore  .pre-commit-config.yaml  .travis.yml  OT_network_schema.json  README.md  chemical_probes.json  mouse_phenotypes.json  opentargets.json  opentargets_chemical_probe.json  opentargets_target_safety.json  opentargets_tep.json  pyproject.toml  release_notes.txt
doc/: changes.md  changes.txt  instructions.md  json_schema_migration_from_1.1_to_1.2.htm  json_schema_migration_from_1.1_to_1.2.xlsx  ~$json_schema_migration_from_1.1_to_1.2.xlsx
draft4_schemas/: OT_network_schema.json  opentargets.json
examples/: affected_pathway.json  expression.json  generic.json  genetic_somatic_eva.json  genetics_literature.json  gwas.json  known_drug.json  literature.json  literature_mining.json  mouse_models.json  somatic_mutation.json
pydantic_models/: chemical_probes.py  essentiality.py  expression.py  expression_input.py  pharmacogenomics.py  target_safety_liabilities.py
python/: LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.py  tox.ini
schemas/: OT_network_schema.json  README.md  TEP.json  baseline_expression.json  chemical_probes.json  disease_target_evidence.json  expression_aggregated.json  expression_study_metadata.json  expression_unaggregated.json  gene-essentiality.json  molecular_interaction.json  molecular_interactions-output.json  molecular_interactions.json  mouse_phenotypes.json  pharmacogenomics.json  target_safety.json  toxcast_liabilities.json
scripts/: json_schema_validator.pl
src/: animal_models.json  base.json  drug.json  (+8 more)
(+103 files in other folders)
