[tool.poetry]
name = "json-schema"
version = "23.06.1"
description = "Schemas describing Open Targets data models"
authors = ["Open Targets Data Team <data@opentargets.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "json_schema"}]

[tool.poetry.dependencies]
python = "3.8.15"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
