[project]
name = "json-schema"
version = "23.06.1"
description = "Schemas describing Open Targets data models"
authors = [{name = "Open Targets Data Team", email = "data@opentargets.org"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10.4"
dependencies = [
    "pydantic==1.10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["json_schema"]
